--- a/src/components/BlogPostsLink.astro
+++ b/src/components/BlogPostsLink.astro
@@ -1,5 +1,5 @@
 ---
-import { Post } from '../lib/interfaces.ts'
+import type { Post } from '../lib/interfaces.ts'
 import { getPostLink } from '../lib/blog-helpers.ts'
 import NoContents from './NoContents.astro'
 
@@ -22,21 +22,25 @@ const { heading, posts } = Astro.props
           <li>
             <a
               href={getPostLink(post.Slug)}
-              title={`${post.Icon?.Emoji || ''}${post.Title}`}
+              title={`${post.Icon && 'Emoji' in post.Icon ? post.Icon.Emoji : ''}${post.Title}`}
             >
-              {post.Icon && post.Icon.Type === 'emoji' ? (
-                <>
-                  <span>{post.Icon.Emoji}</span>
-                  {post.Title}
-                </>
-              ) : post.Icon && post.Icon.Type === 'external' ? (
-                <>
-                  <img
-                    src={post.Icon.Url}
-                    alt="Post title icon in a link list"
-                  />
-                  {post.Title}
-                </>
+              {post.Icon && 'Type' in post.Icon ? (
+                post.Icon.Type === 'emoji' && 'Emoji' in post.Icon ? (
+                  <>
+                    <span>{post.Icon.Emoji}</span>
+                    {post.Title}
+                  </>
+                ) : post.Icon.Type === 'external' && 'Url' in post.Icon ? (
+                  <>
+                    <img
+                      src={post.Icon.Url}
+                      alt="Post title icon in a link list"
+                    />
+                    {post.Title}
+                  </>
+                ) : (
+                  post.Title
+                )
               ) : (
                 post.Title
               )}
@@ -52,41 +56,52 @@ const { heading, posts } = Astro.props
   .blog-posts-link {
   }
   .blog-posts-link h2 {
-    margin: 0;
+    margin: 0 0 1rem;
     padding-left: 0.4rem;
-    color: #777;
-    font-size: 0.95rem;
+    color: #ff4081;
+    font-size: 1rem;
+    font-weight: 500;
+    letter-spacing: 0.02em;
   }
   .blog-posts-link ul {
     list-style-type: none;
     padding: 0;
     margin-top: 0.4rem;
-    margin-block-end: 1rem;
+    margin-block-end: 1.2rem;
   }
   .blog-posts-link ul li {
+    margin-bottom: 0.3rem;
   }
   .blog-posts-link ul li a {
     display: block;
     border-radius: var(--radius);
-    padding: 0.4rem 0.4rem;
-    line-height: 1.2rem;
+    padding: 0.5rem 0.8rem;
+    line-height: 1.3rem;
     color: inherit;
     font-size: 0.95rem;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    transition: all 0.2s ease;
+    background-color: rgba(255, 255, 255, 0.5);
+    border: 1px solid transparent;
   }
   .blog-posts-link ul li a:hover {
-    background-color: #ddd;
+    background-color: rgba(255, 255, 255, 0.8);
+    transform: translateX(3px);
+    border-color: rgba(255, 64, 129, 0.2);
+    box-shadow: 0 2px 8px rgba(255, 64, 129, 0.1);
   }
   .blog-posts-link ul li a span,
   .blog-posts-link ul li a img {
     display: inline-block;
-    margin-right: 0.2rem;
+    margin-right: 0.4rem;
+    font-size: 1.1em;
   }
   .blog-posts-link ul li a img {
     width: 1.25rem;
     height: 1.25rem;
     vertical-align: sub;
+    border-radius: 3px;
   }
 </style>
