--- a/src/styles/blog.module.css
+++ b/src/styles/blog.module.css
@@ -31,10 +31,18 @@
 }
 
 .post h2 {
-  background: linear-gradient(45deg, #ff4081, #ff6b98);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  color: #ff4081;
   margin-bottom: 1rem;
+  font-weight: 700;
+}
+
+.post h2 a {
+  color: inherit;
+  transition: color 0.2s ease;
+}
+
+.post h2 a:hover {
+  color: #ff6b98;
 }
 
 .post footer {
