--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -236,7 +236,6 @@ if (database.Icon && 'Type' in database.Icon && 'Url' in database.Icon) {
     object-position: center 60%;
     border-bottom: 3px solid rgba(255, 183, 197, 0.3);
   }
-
   div.content {
     padding: 30px 40px;
     background-color: #ffffff;
@@ -244,6 +243,7 @@ if (database.Icon && 'Type' in database.Icon && 'Url' in database.Icon) {
     box-shadow: 0 4px 15px rgba(255, 183, 197, 0.15);
     margin: 20px;
     border: 3px solid rgba(255, 183, 197, 0.2);
+    min-width: 430px;
   }
   @media (max-width: 640px) {
     div.content {
