--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -177,7 +177,7 @@ if (database.Icon && 'Type' in database.Icon && 'Url' in database.Icon) {
     display: flex;
     max-width: 1280px;
     margin: 0 auto;
-    padding: 0 20px;
+    padding: 0 3px;
   }
   @media (max-width: 640px) {
     .container > div {
@@ -248,9 +248,9 @@ if (database.Icon && 'Type' in database.Icon && 'Url' in database.Icon) {
   }
   @media (max-width: 640px) {
     div.content {
-      padding: 20px;
-      margin: 10px;
-      width: calc(100% - 20px);
+      padding: 5px;
+      margin: 10px 0;
+      width: 100%;
     }
   }
 
